--- a/my_projects_tt/image_carousel/carousel.html
+++ b/my_projects_tt/image_carousel/carousel.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <ul class="slider">
-            <li class="item" style="background-image:url('images/2b157f0e2aa00134a4fe078f027d0e3c.jpg')">
+            <li class="item" style="background-image:url('images/anime-jujutsu_kaisen-blonde-kento_nanami-1008724.jpeg')">
                 <div class="content">
                     <h2 class="title">Kento Nanami</h2>
                     <p class="description">Был студентом Токийской школы магии.
@@ -20,7 +20,7 @@
                     <button>Read More</button>
                 </div>
             </li>
-                    <li class="item" style="background-image:url('images/9dfd13481507c801beb134467c89a7b8.jpg')">
+                    <li class="item" style="background-image:url('images/anime-jujutsu_kaisen-yuji_itadori-935361.jpeg')">
                 <div class="content">
                     <h2 class="title">Yuji Itadori</h2>
                     <p class="description">Один из главных персонажей Магической Битвы.
@@ -28,7 +28,7 @@
                     <button>Read More</button>
                 </div>
             </li>
-                    <li class="item" style="background-image:url('images/E24io5jWQAIhaUl.jpg')">
+                    <li class="item" style="background-image:url('images/anime-jujutsu_kaisen-satoru_gojo-1509915.jpeg')">
                 <div class="content">
                     <h2 class="title">Satoru Gojo</h2>
                     <p class="description">Один из главных персонажей Jujutsu Kaisen.
@@ -39,7 +39,7 @@
                     <button>Read More</button>
                 </div>
             </li>
-                    <li class="item" style="background-image:url('images/Fushiguro.Megumi.600.3996506.jpg')">
+                    <li class="item" style="background-image:url('images/anime-jujutsu_kaisen-megumi_fushiguro-1027748.jpeg')">
                 <div class="content">
                     <h2 class="title">Megumi Fushiguro</h2>
                     <p class="description">один из центральных персонажей Jujutsu Kaisen.
@@ -48,7 +48,7 @@
                     <button>Read More</button>
                 </div>
             </li>
-                    <li class="item" style="background-image:url('images/Ryomen_Sukuna.jpg')">
+                    <li class="item" style="background-image:url('images/anime-jujutsu_kaisen-pink_hair-red_eyes-sukuna_jujutsu_kaisen-1023109.jpeg')">
                 <div class="content">
                     <h2 class="title">Sukuna</h2>
                     <p class="description">Сильнейший маг тысячелетней давности.
