--- a/image_carousel/heroes_categories/tokyo_carousel/first_course.html
+++ b/image_carousel/heroes_categories/tokyo_carousel/first_course.html
@@ -14,7 +14,7 @@
         <nav class="main-menu">
         <ul>
             <li>
-                <a class = "list-group-item" href = "#" >
+                <a class = "list-group-item" href = "../../main_screen/slide.html" >
                     <i class = "zmdi zmdi-home zmdi-hc-fw"></i>
                     <span class="nav-text">
                         Home
