--- a/image_carousel/heroes_categories/tokyo_carousel/third_course.html
+++ b/image_carousel/heroes_categories/tokyo_carousel/third_course.html
@@ -74,6 +74,9 @@
         </nav>
     </div>
         <ul class="slider">
+            <li class="item" style="background-image:url(../../images/item1.jpg)">
+                <div class="content"></div>
+            </li>
             <li class="item" style="background-image:url('../../images/AnyConv.com__KinjiHakariVerse2 (1).jpeg')">
                 <div class="content">
                     <h2 class="title">Hakari Kinji</h2>
