--- a/image_carousel/heroes_categories/tokyo_carousel/first_course.html
+++ b/image_carousel/heroes_categories/tokyo_carousel/first_course.html
@@ -124,7 +124,7 @@
                 const nobaraButton = document.getElementById('nobaraButton');
 
                 function openDescription(url) {
-                    window.open(url, 'sameWindowName');
+                    window.location.href = url;
                 }
 
                 yujiButton.addEventListener('click', function () {
