--- a/image_carousel/heroes_categories/tokyo_carousel/first_course.html
+++ b/image_carousel/heroes_categories/tokyo_carousel/first_course.html
@@ -74,7 +74,7 @@
         </nav>
     </div>
         <ul class="slider">
-            <li class="item" style="background-image:url('../../images/carousel/tokyo_school/anime-jujutsu_kaisen-nobara_kugisaki-1020238.jpeg')">
+            <li class="item active" style="background-image:url('../../images/carousel/tokyo_school/anime-jujutsu_kaisen-nobara_kugisaki-1020238.jpeg')">
                 <div class="content">
                     <h2 class="title">Kugisaki Nobara</h2>
                     <p class="description">Нобара Кугисаки (釘くぎ崎さき野の薔ば薇ら Kugisaki Nobara?) —
