--- a/image_carousel/heroes_categories/tokyo_carousel/sempai.html
+++ b/image_carousel/heroes_categories/tokyo_carousel/sempai.html
@@ -74,7 +74,7 @@
         </nav>
     </div>
         <ul class="slider">
-            <li class="item" style="background-image:url('../../images/tengen.jpeg')">
+            <li class="item active" style="background-image:url('../../images/tengen.jpeg')">
                 <div class="content">
                     <h2 class="title">Tengen</h2>
                     <p class="description">Тенген (天てん元げん Tengen?), также известный как Мастер Тенген
@@ -190,7 +190,7 @@
                 const tengenButton = document.getElementById('tengenButton');
 
                 function openDescription(url) {
-                    window.open(url, 'sameWindowName');
+                    window.location.href = url;
                 }
 
                 kentoButton.addEventListener('click', function () {
