--- a/image_carousel/heroes_categories/tokyo_carousel/third_course.html
+++ b/image_carousel/heroes_categories/tokyo_carousel/third_course.html
@@ -77,7 +77,7 @@
             <li class="item" style="background-image:url(../../images/item1.jpg)">
                 <div class="content"></div>
             </li>
-            <li class="item" style="background-image:url('../../images/AnyConv.com__KinjiHakariVerse2 (1).jpeg')">
+            <li class="item active" style="background-image:url('../../images/AnyConv.com__KinjiHakariVerse2 (1).jpeg')">
                 <div class="content">
                     <h2 class="title">Hakari Kinji</h2>
                     <p class="description">Кинджи Хакари (秤はかり金きん次じ Hakari Kinji?) — персонаж серии Магическая Битва.
@@ -115,7 +115,7 @@
                 const kiraraButton = document.getElementById('kiraraButton');
 
                 function openDescription(url) {
-                    window.open(url, 'sameWindowName');
+                      window.location.href = url;
                 }
 
                 hakariButton.addEventListener('click', function () {
