--- a/image_carousel/heroes_categories/kamo.html
+++ b/image_carousel/heroes_categories/kamo.html
@@ -74,7 +74,7 @@
         </nav>
     </div>
         <ul class="slider">
-            <li class="item" style="background-image:url('../images/kamo/kenjaku_s_true_form_by_noxmatos_dgatoj4-pre.jpg')">
+            <li class="item active" style="background-image:url('../images/kamo/kenjaku_s_true_form_by_noxmatos_dgatoj4-pre.jpg')">
                 <div class="content">
                     <h2 class="title">Неизвестный маг</h2>
                     <p class="description">Неизвестный маг — 400 лет назад Кэндзяку пересадил свой мозг с помощью своей
@@ -122,7 +122,7 @@
                 const unknownButton = document.getElementById('unknownButton');
 
                 function openDescription(url) {
-                    window.open(url, 'sameWindowName');
+                    window.location.href = url;
                 }
 
                 noritoshiButton.addEventListener('click', function () {
