--- a/image_carousel/main_screen/slide.html
+++ b/image_carousel/main_screen/slide.html
@@ -84,7 +84,7 @@
             <a href="../heroes_categories/zenin.html" class="img-container" data-name="Семья Зенин">
                 <img src="../images/main_screen/bf3893a1dee7784d06ed10e064cd1f7d.jpg" alt="">
             </a>
-            <a href="../heroes_categories/heroes_categories/kamo.html" class="img-container" data-name="Семья Камо">
+            <a href="../heroes_categories/kamo.html" class="img-container" data-name="Семья Камо">
                 <img src="../images/main_screen/ed5201bc141d5fa388398bf01726f961.jpg" alt="">
             </a>
             <a href="../heroes_categories/itadori_family.html" class="img-container" data-name="Семья Итадори">
